--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,16 +1,8 @@
-[app]
-app_name = ucenter
-http_port = 8080
-run_mode = dev
+copyrequestbody = true
+appname = ucenter
+httpport = 8080
+runmode = dev
 
-[session]
-session_name = ucenter_sess
-session_provider = mysql
-session_provider_config = root:123456@tcp(127.0.0.1:3306)/UCENTER?charset=utf8&loc=UTC
-session_life_time = 0
-session_gc_time = 3600
-
-[orm]
 driver_name = mysql
 data_source = root:123456@tcp(127.0.0.1:3306)/UCENTER?charset=utf8&loc=UTC
 max_idle_conn = 30
