--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,10 +1,14 @@
 copyrequestbody = true
-appname = ucenter
+appname = massgm
 httpport = 8080
 runmode = dev
+appurl  =
+secretkey = 3daoiyhe1ihnafg9880haoubgou
+copyrequestbody = true
 
-driver_name = mysql
-data_source = root:123456@tcp(127.0.0.1:3306)/UCENTER?charset=utf8&loc=UTC
-max_idle_conn = 30
-max_open_conn = 50
-debug_log = true
+
+drivername = mysql
+datasource = root:123456@tcp(127.0.0.1:3306)/dream_city?charset=utf8&loc=UTC
+maxidleconn = 30
+maxopenconn = 50
+debuglog = true
