battle no json check

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,5 +1,5 @@
 copyrequestbody = true
-appname = massgm
+appname = ucenter
 httpport = 8080
 runmode = dev
 appurl  =
@@ -8,7 +8,7 @@ copyrequestbody = true
 
 
 drivername = mysql
-datasource = root:123456@tcp(127.0.0.1:3306)/dream_city?charset=utf8&loc=UTC
+datasource = root@tcp(127.0.0.1:3306)/ucenter?charset=utf8&loc=UTC
 maxidleconn = 30
 maxopenconn = 50
 debuglog = true
